@@ -17,6 +17,58 @@ package|;
 end_package
 
 begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|BaseTokenStreamTestCase
+operator|.
+name|assertTokenStreamContents
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|spy
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|times
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|verify
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -154,9 +206,65 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|parser
+operator|.
+name|CharStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|parser
+operator|.
+name|ParseException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|parser
+operator|.
+name|SolrQueryParserBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|request
 operator|.
 name|SolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|FieldType
 import|;
 end_import
 
@@ -220,6 +328,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|SyntaxError
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Before
@@ -243,22 +365,6 @@ operator|.
 name|junit
 operator|.
 name|Test
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|BaseTokenStreamTestCase
-operator|.
-name|*
 import|;
 end_import
 
@@ -1184,6 +1290,172 @@ argument_list|)
 argument_list|,
 literal|"//result[@numFound=1]"
 argument_list|)
+expr_stmt|;
+block|}
+DECL|class|SolrQParser
+specifier|private
+specifier|static
+specifier|final
+class|class
+name|SolrQParser
+extends|extends
+name|SolrQueryParserBase
+block|{
+annotation|@
+name|Override
+DECL|method|TopLevelQuery
+specifier|public
+name|Query
+name|TopLevelQuery
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+throws|throws
+name|ParseException
+throws|,
+name|SyntaxError
+block|{
+return|return
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|ReInit
+specifier|public
+name|void
+name|ReInit
+parameter_list|(
+name|CharStream
+name|stream
+parameter_list|)
+block|{}
+annotation|@
+name|Override
+DECL|method|getReversedWildcardFilterFactory
+specifier|protected
+name|ReversedWildcardFilterFactory
+name|getReversedWildcardFilterFactory
+parameter_list|(
+name|FieldType
+name|fieldType
+parameter_list|)
+block|{
+return|return
+name|super
+operator|.
+name|getReversedWildcardFilterFactory
+argument_list|(
+name|fieldType
+argument_list|)
+return|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testCachingInQueryParser
+specifier|public
+name|void
+name|testCachingInQueryParser
+parameter_list|()
+block|{
+name|SolrQParser
+name|parser
+init|=
+operator|new
+name|SolrQParser
+argument_list|()
+decl_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|()
+decl_stmt|;
+name|String
+index|[]
+name|fields
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"one"
+block|,
+literal|"two"
+block|,
+literal|"three"
+block|}
+decl_stmt|;
+name|String
+name|aField
+init|=
+name|fields
+index|[
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+name|fields
+operator|.
+name|length
+argument_list|)
+index|]
+decl_stmt|;
+name|FieldType
+name|type
+init|=
+name|req
+operator|.
+name|getSchema
+argument_list|()
+operator|.
+name|getField
+argument_list|(
+name|aField
+argument_list|)
+operator|.
+name|getType
+argument_list|()
+decl_stmt|;
+name|FieldType
+name|typeSpy
+init|=
+name|spy
+argument_list|(
+name|type
+argument_list|)
+decl_stmt|;
+comment|// calling twice
+name|parser
+operator|.
+name|getReversedWildcardFilterFactory
+argument_list|(
+name|typeSpy
+argument_list|)
+expr_stmt|;
+name|parser
+operator|.
+name|getReversedWildcardFilterFactory
+argument_list|(
+name|typeSpy
+argument_list|)
+expr_stmt|;
+comment|// but it should reach only once
+name|verify
+argument_list|(
+name|typeSpy
+argument_list|,
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|getIndexAnalyzer
+argument_list|()
 expr_stmt|;
 block|}
 block|}
